TEst 1, requires improvement.

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 
     <script src="components/services/BLEService.js"></script>
     <script src="components/services/DBService.js"></script>
+
     <script src="components/devices/devices.js"></script>
     <script src="components/monitor/monitor.js"></script>
     <script src="components/records/records.js"></script>
@@ -36,6 +37,9 @@
                 };
 
                 $DBService.initialize_db();
+
+
+
 
             });
 
@@ -155,10 +159,11 @@
                 Records - [{{selectElem.name}}]
             </div>
         </ons-toolbar>
-        <div class="content" style="text-align: center" ng-controller="RecordsController">
+        <div class="content" style="text-align: center" >
             <ons-button ng-click="startRecording()" ng-disabled="recording">Start Recording</ons-button>
             <ons-button ng-click="stopRecording()" ng-disabled="!recording">Stop</ons-button>
             <ons-button ng-click="deleteRecord()" ng-disabled="!selectElem.id">Delete</ons-button>
+            <ons-button ng-click="sentRecord()" ng-disabled="!selectElem.id">Send</ons-button>
 
             <ons-list id="record_list">
                 <ons-list-item tappable ng-repeat="item in availableRecords" ng-click="select_element(item)"
