--- a/www/index.html
+++ b/www/index.html
@@ -73,12 +73,13 @@
                 <ons-list-item ng-click="app.load('devices.html')" tappable>
                     Devices
                 </ons-list-item>
-                <ons-list-item ng-click="app.load('monitor.html')" tappable>
-                    Monitor
-                </ons-list-item>
                 <ons-list-item ng-click="app.load('records.html')" tappable>
                     Records
                 </ons-list-item>
+                <ons-list-item ng-click="app.load('monitor.html')" tappable>
+                    Monitor
+                </ons-list-item>
+
             </ons-list>
         </ons-page>
     </ons-splitter-side>
@@ -99,6 +100,21 @@
         </ons-toolbar>
         <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
             Swipe right to open the menu!
+            <p/>
+            <sl>
+                <li>Select a Device (Go into the menu to refresh if device does not appear)</li>
+                <li>Go to Records. </li>
+                <li>Start a new Record</li>
+                <li>Go to monitor. Do the session.</li>
+                <li>Go to Records. </li>
+                <li>Stop the Record</li>
+                <li>Send the Record</li>
+            </sl>
+            <p/>
+            <bold>The blue light in the devices (Feather M0) means there is connection. After a minute of
+                inactivity it will turn off. Exit from the app in case of error</bold>
+
+           <small>Nekotiko - 2017 - </small>
         </p>
     </ons-page>
 </ons-template>
