--- a/www/index.html
+++ b/www/index.html
@@ -101,7 +101,7 @@
         <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
             Swipe right to open the menu!
             <p/>
-            <sl>
+            <ol type="I">
                 <li>Select a Device (Go into the menu to refresh if device does not appear)</li>
                 <li>Go to Records. </li>
                 <li>Start a new Record</li>
@@ -109,12 +109,12 @@
                 <li>Go to Records. </li>
                 <li>Stop the Record</li>
                 <li>Send the Record</li>
-            </sl>
+            </ol>
             <p/>
             <bold>The blue light in the devices (Feather M0) means there is connection. After a minute of
                 inactivity it will turn off. Exit from the app in case of error</bold>
 
-           <small>Nekotiko - 2017 - </small>
+          <center><small> - Nekotiko&reg; 2017 &copy;- </small></center>
         </p>
     </ons-page>
 </ons-template>
